# PuppetBox

./: .gitignore  CMakeLists.txt  README.md
PuppetBox/: AbstractInputProcessor.h  Engine.cpp  Engine.h  GladGfxApi.h  GlfwInitializer.cpp  GlfwInitializer.h  GlfwInputProcessor.h  IGfxApi.h  IHardwareInitializer.h  KeyCode.h  Main.cpp  README.md  Sdl2Initializer.h  Sdl2InputProcessor.h  TypeDef.h  WindowProperties.h
PuppetBoxEngine/: AbstractInputProcessor.cpp  AbstractInputProcessor.h  AbstractMessage.h  AbstractSceneHandler.cpp  ArrayTree.h  AssetArchive.cpp  AssetArchive.h  AssetLibrary.cpp  AssetLibrary.h  CMakeLists.txt  Camera.cpp  Camera.h  Config.cpp  Engine.cpp  Engine.h  GfxMath.cpp  GfxMath.h  GladGfxApi.cpp  GladGfxApi.h  GlfwInitializer.cpp  GlfwInitializer.h  IGfxApi.h  IHardwareInitializer.h  IMessage.h  IModel.h  ITree.h  ImageData.h  ImageOptions.h  ImageReference.h  KeyCode.cpp  KeyCode.h  Logger.h  Material.h  Math.cpp  Math.h  Mesh.h  MessageBroker.h  OpenGLGfxApi.cpp  OpenGLGfxApi.h  OpenGLModel.h  (+17 more)
PuppetBoxEngine/assets/: ui.glyph.fragment.shader  ui.glyph.geometry.shader  ui.glyph.vertex.shader
PuppetBoxEngine/src/: AbstractBehavior.cpp  AbstractInputProcessor.cpp  AbstractInputReader.cpp  AbstractRenderComponent.cpp  AbstractRenderComponent.h  AbstractSceneGraph.cpp  AbstractSceneHandler.cpp  AnimationCatalogue.cpp  AnimationCatalogue.h  AssetArchive.cpp  AssetArchive.h  AssetLibrary.cpp  AssetLibrary.h  Camera.cpp  Camera.h  DefaultSceneGraph.h  Engine.cpp  Engine.h  EventDef.cpp  EventDef.h  FileUtils.cpp  FileUtils.h  Font.h  FontLoader.cpp  FontLoader.h  GfxMath.cpp  GfxMath.h  GfxUIComponent.h  IGfxApi.h  IHardwareInitializer.h  IModel.h  ImageData.h  ImageMapData.h  ImageOptions.h  ImageReference.h  Logger.cpp  Logger.h  Material.h  Mesh.h  MessageBroker.h  (+34 more)
PuppetBoxEngine/src/pipeline/: AIComponent.cpp  AbstractObjectComponent.cpp  AbstractPipelineData.cpp  ActionComponent.cpp  AnimationComponent.cpp  AnimatorPipelineData.cpp  DefaultAnimator.cpp  InstanceRenderPipelineData.cpp  PhysicsComponent.cpp  Pipeline.cpp  PositionComponent.cpp  SingleRenderPipelineData.cpp  TransformPipelineData.cpp
PuppetBoxEngine/src/ui/: GroupComponent.cpp  TextAreaComponent.cpp  UIComponent.cpp
PuppetBoxExample/: CMakeLists.txt
PuppetBoxExample/assetbuilder/: .manifest  BasicHuman.anims  BasicHuman.skele  BasicHuman_Idle0.anim  BasicHuman_Punch.anim  BasicHuman_Walk.anim  Chain-Closed.mat  Chain-Open.mat  GenericMob.m  TestBody.mat  TestHand.mat  TestHead.mat  basic.fragment.shader  basic.program.shader  basic.vertex.shader  bat.m  bat.mat  chain.m  glyph.mesh  knife.m  knife.mat  sprite.mesh  ui.glyph.fragment.shader  ui.glyph.geometry.shader  ui.glyph.program.shader  ui.glyph.vertex.shader  zip_archive.py
PuppetBoxExample/src/: AbstractInputProcessor.h  AimingBehavior.cpp  AimingBehavior.h  Command.h  Common.h  Constants.cpp  Constants.h  Controls.h  CustomSceneHandler.h  Entity.h  EventDef.cpp  EventDef.h  Game2DInputProcessor.h  Game3DInputProcessor.h  GameEvent.h  InputActions.h  Main.cpp  MathUtils.h  MultiplayerSceneGraph.h  NetworkEvents.h  SceneObjectBuilder.h  ScreenTranslator.h  SinglePlayerSceneGraph.h  SingleplayerSceneGraph.h  Sprite.h  TypeDef.h  UIAttributeBuilder.h  UIController.h  UserInput.h
PuppetBoxTest/: CustomSceneHandler.h  Entity.h  Main.cpp  Sprite.h
include/: PuppetBox.h
include/puppetbox/: AbstractBehavior.h  AbstractInputProcessor.h  AbstractInputReader.h  AbstractObjectComponent.h  AbstractSceneGraph.h  AbstractSceneHandler.h  BasicMessage.h  Camera.h  Constants.h  DataStructures.h  Event.h  IAnimationCatalogue.h  IBehavior.h  IModel.h  IObjectComponent.h  IPipeline.h  IRenderComponent.h  IRenderWindow.h  IValueReference.h  ImageMapReference.h  KeyCode.h  Pipeline.h  RenderData.h  RenderWindow.h  SceneObject.h  TypeDef.h  UIComponent.h  Utilities.h  WanderBehavior.h
tools/GPUDetails/: .gitignore  CMakeLists.txt
tools/GPUDetails/src/: main.cpp
tools/freetype-conversion/: .gitignore  CMakeLists.txt
tools/freetype-conversion/src/: main.cpp  stb_image.cpp
tools/svg-to-png/: .gitignore  CurveToPoints.js  InverseKinematics.js  main.py
